updated sprites, got animation working well

--- a/html/index.html
+++ b/html/index.html
@@ -37,8 +37,10 @@ Your browser does not support the HTML5 canvas tag.
 <img src="../images/tequila.png" id="tequila" />
 <img src="../images/whiskey.png" id="whiskey" />
 
-<img src="../images/mug.png" id="character" />
+<img src="../images/spriteLeft.png" id="spriteLeftFacing" />
+<img src="../images/spriteRight.png" id="spriteRightFacing" />
 
 <script src="../js/gameObjects.js"></script>
 <script src="../js/app.js"></script>
 </html>
+
